# openface2_ros_img_split

./: CMakeLists.txt  README.md
msg/: Face.msg  Faces.msg
src/: openface2_ros.cpp  openface_ros.cpp
